--- a/src/main/resources/templates/payment/read.html
+++ b/src/main/resources/templates/payment/read.html
@@ -26,7 +26,6 @@
 </header>
 
 <main id="main" class="content-container-wrapper">
-    <span th:text="${reservation}"></span>
     <div class="content-container">
         <div class="title-container">
             <h1 class="title">예약 확인 및 결제</h1>
@@ -39,7 +38,7 @@
         <div class="confirmation-payment-container">
             <div class="confirmation-container">
                 <div class="image-container">
-                    <img th:src="@{/images/sample.png}" alt="">
+                    <img th:src="@{${mainFile.dir} + ${mainFile.filename}}" alt="">
                 </div>
                 <ul class="info">
                     <li>
