--- a/src/main/resources/templates/admin/modifyRoom.html
+++ b/src/main/resources/templates/admin/modifyRoom.html
@@ -31,10 +31,10 @@
                 <div class="title-container">
                     <h1 class="title">호텔 관리 > 객실 수정 및 삭제</h1>
                 </div>
-                <div th:if="${hotelname == null}">
+                <div th:if="${hotelName == null}">
                     <label>
                         <span class="text">호텔을 선택해 주세요</span>
-                        <select class="form-select hotelList">
+                        <select class="form-select hotel-list">
                             <th:block th:each="hotel : ${hotelList}">
                                 <option th:value="${hotel}" th:text="${hotel}"></option>
                             </th:block>
@@ -45,10 +45,10 @@
                     </div>
                 </div>
 
-                <div th:if="${hotelname != null and roomKind == null}">
+                <div th:if="${hotelName != null and roomKind == null}">
                     <label>
                         <span class="text">객실을 선택해 주세요</span>
-                        <select class="form-select roomList">
+                        <select class="form-select room-list">
                             <th:block th:each="room : ${roomList}">
                                 <option th:value="${room}" th:text="${room}"></option>
                             </th:block>
@@ -59,7 +59,8 @@
                     </div>
                 </div>
 
-                <div th:if="${hotelname != null && roomKind != null}">
+                <div th:if="${hotelName != null && roomKind != null}">
+                    <input hidden class="room-id" type="text" th:value="${roomMainFile.room.id}">
                     <div class="modify-room-container">
                         <section class="room_img_block">
                             <div class="main-image-container">
@@ -73,8 +74,8 @@
                                     <label>PREVIEW</label>
                                     <ul class="preview" id="previewMain">
                                         <li class="item">
-                                            <input hidden type="text" class="filename" name="filename" th:value="${roomMainFile.filename}">
-                                            <img class="img" th:src="@{${roomMainFile.dir} + ${roomMainFile.filename}}" alt="">
+                                            <input hidden type="text" class="existing-file-name" name="existingFileName" th:value="${roomMainFile.fileName}">
+                                            <img class="img" th:src="@{${roomMainFile.dir} + ${roomMainFile.fileName}}" alt="">
                                             <a class="btn btn-secondary delete-btn">삭제</a>
                                         </li>
                                     </ul>
@@ -92,8 +93,8 @@
                                     <label>PREVIEW</label>
                                     <ul class="preview" id="previewRoom">
                                         <li class="item" th:each="file : ${roomFileList}">
-                                            <input hidden type="text" class="filename" name="filename" th:value="${file.filename}">
-                                            <img class="img" th:src="@{${file.dir} + ${file.filename}}" alt="">
+                                            <input hidden type="text" class="existing-file-name" name="existingFileName" th:value="${file.fileName}">
+                                            <img class="img" th:src="@{${file.dir} + ${file.fileName}}" alt="">
                                             <a class="btn btn-secondary delete-btn">삭제</a>
                                         </li>
                                     </ul>
@@ -105,7 +106,7 @@
                             <form class="room-form" id="roomForm">
                                 <div>
                                     <label>객실 종류</label>
-                                    <input name="kind" class="form-control" placeholder="객실 종류" required>
+                                    <input name="kind" class="form-control" th:value="${roomMainFile.room.kind}" required>
                                 </div>
                                 <div>
                                     <label>체크인</label>
@@ -127,27 +128,27 @@
                                 </div>
                                 <div>
                                     <label>금요일 가격</label>
-                                    <input name="fridayPrice" class="form-control" placeholder="금요일 가격" required>
+                                    <input name="fridayPrice" class="form-control" th:value="${roomMainFile.room.fridayPrice}" required>
                                 </div>
                                 <div>
                                     <label>토요일 가격</label>
-                                    <input name="saturdayPrice" class="form-control" placeholder="토요일 가격" required>
+                                    <input name="saturdayPrice" class="form-control" th:value="${roomMainFile.room.saturdayPrice}" required>
                                 </div>
                                 <div>
                                     <label>주중 가격</label>
-                                    <input name="weekdayPrice" class="form-control" placeholder="주중 가격" required>
+                                    <input name="weekdayPrice" class="form-control" th:value="${roomMainFile.room.weekdayPrice}" required>
                                 </div>
                                 <div>
                                     <label>기준 인원</label>
-                                    <input name="standardPeople" class="form-control" placeholder="기준 인원" required>
+                                    <input name="standardPeople" class="form-control" th:value="${roomMainFile.room.standardPeople}" required>
                                 </div>
                                 <div>
                                     <label>최대 인원</label>
-                                    <input name="maximumPeople" class="form-control" placeholder="최대 인원" required>
+                                    <input name="maximumPeople" class="form-control" th:value="${roomMainFile.room.maximumPeople}" required>
                                 </div>
                                 <div>
                                     <label>객실 개수</label>
-                                    <input name="count" class="form-control" placeholder="객실 개수" required>
+                                    <input name="count" class="form-control" th:value="${roomMainFile.room.count}" required>
                                 </div>
                                 <div>
                                     <button class="btn btn-primary modify_room_btn w-100">수정</button>
@@ -161,8 +162,7 @@
         </div>
     </div>
 
-    <input hidden class="hotelname" type="text" th:value="${hotelname}">
-    <input hidden class="room-id" type="text" th:value="${roomMainFile.room.id}">
+    <input hidden class="hotel-name" type="text" th:value="${hotelName}">
 </main>
 
 <th:block th:insert="~{fragments/footer.html :: footer_fragment}"></th:block>
